# Android

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
DownloadApk/: README.md
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  consts.h  diagRevealer.cpp  diagcfgwr.cpp  diagcfgwr.h  hdlc.cpp  hdlc.h  log_config.cpp  log_config.h  log_packet.cpp  log_packet.h  log_packet_utils.h  lte_nas_emm_state.h  lte_nb1_ml1_gm_tx_report.h  lte_pdsch_stat_indication.h  lte_phy_connected_neighbor_cell_meas.h  lte_phy_idle_neighbor_cell_meas.h  lte_phy_interlog.h  lte_phy_pusch_csf.h  lte_phy_pusch_tx_report.h  lte_phy_serving_cell_com_loop.h  lte_phy_serving_cell_meas_res.h  lte_phy_system_scan_results.h  lte_pucch_power_control.h  lte_pusch_power_control.h  lte_rlc_dl_am_all_pdu.h  lte_rlc_ul_am_all_pdu.h  lte_rlc_ul_config.h  lte_rlc_ul_stats.h  lte_rrc_mib_message_log_packet.h  lte_rrc_ota.h  lte_rrc_serv_cell_info.h  packet-aww.cpp  packet-aww.h  pdml_parser.cpp  pdml_parser.h  srch_tng_1x_searcher_dump.h  testfile.cpp  utils.cpp  utils.h  (+3 more)
app/src/main/cpp/extstdio/: fmemopen.cpp
app/src/main/cpp/gsm/: gsm_dsds_rr_signaling_message.h  gsm_rr_cell_reselection_meas.h
app/src/main/cpp/lte/: lte_mac_configuration.h  lte_mac_dl_transportblock.h  lte_mac_rach_attempt.h  lte_mac_rach_trigger.h  lte_mac_ul_transportblock.h  lte_pdcch_phich_indication_report.h  lte_phy_bplmn_cell_confirm.h  lte_phy_cdrx_events_info.h  lte_phy_pusch_csf.h  lte_phy_rlm_report.h  lte_pucch_power_control.h  lte_pusch_power_control.h  lte_rlc_dl_stats.h  lte_rrc_mib_message_log_packet.h  lte_rrc_serv_cell_info.h
app/src/main/cpp/lte/mac/: lte_mac_configuration.h  lte_mac_dl_transportblock.h  lte_mac_rach_attempt.h  lte_mac_rach_trigger.h  lte_mac_ul_bufferstatusinternal.h  lte_mac_ul_transportblock.h  lte_mac_ul_txstatistics.h
app/src/main/cpp/lte/nas/: lte_nas_esm_state.h  lte_nas_plain.h
app/src/main/cpp/lte/nb1/: lte_nb1_ml1_gm_tx_report.h
app/src/main/cpp/lte/pdcp/: lte_pdcp_dl_cipher_data_pdu.h  lte_pdcp_dl_config.h  lte_pdcp_dl_ctrl_pdu.h  lte_pdcp_dl_stats.h  lte_pdcp_ul_cipher_data_pdu.h  lte_pdcp_ul_config.h  lte_pdcp_ul_ctrl_pdu.h  lte_pdcp_ul_stats.h
app/src/main/cpp/lte/phy/: lte_phy_bplmn_cell_confirm.h  lte_phy_bplmn_cell_request.h  lte_phy_cdrx_events_info.h  lte_phy_connected_mode_intra_freq_meas_results.h  lte_phy_idle_neighbor_cell_meas.h  lte_phy_irat.h  lte_phy_irat_cdma.h  lte_phy_pdcch_decoding_result.h  lte_phy_pdsch_decoding_result.h  lte_phy_pdsch_demapper_configuration.h  lte_phy_pucch_csf.h  lte_phy_pucch_tx_report.h  lte_phy_pusch_csf.h  lte_phy_pusch_tx_report.h  lte_phy_rlm_report.h  lte_phy_serving_cell_com_loop.h  lte_phy_system_scan_results.h
app/src/main/cpp/lte/rlc/: lte_rlc_dl_am_all_pdu.h  lte_rlc_dl_config.h  lte_rlc_dl_stats.h  lte_rlc_ul_am_all_pdu.h  lte_rlc_ul_config.h  lte_rlc_ul_stats.h
app/src/main/cpp/lte/rrc/: lte_rrc_mib_message_log_packet.h  lte_rrc_ota.h  lte_rrc_serv_cell_info.h
app/src/main/cpp/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
app/src/main/java/com/example/login/: DataClasses.kt  DataManager.kt  DataScreen.kt  DataSendingScreen.kt  ForegroundService.kt  HourlyTrafficChart.kt  LoginScreen.kt  MainActivity.kt  MapScreen.kt  NavigationScreen.kt  NetworkManager.kt  RSRPGraph.kt  RootManager.kt  RootModeScreen.kt  SettingsScreen.kt  SpeedTestManager.kt  SpeedTestScreen.kt  TrafficDataWorker.kt  TrafficManager.kt  TrafficScreen.kt  UpdateManager.kt  UpdateScreen.kt  Utils.kt  WelcomeScreen.kt
app/src/main/java/com/example/login/ui/theme/: Color.kt  Theme.kt
app/src/main/jni/: CMakeLists.txt  diag_revealer.c
app/src/main/jniLibs/includes/: glib.h
app/src/main/jniLibs/includes/glib/: galloca.h  garray.h  gasyncqueue.h  gatomic.h  gbacktrace.h  gbase64.h  gbitlock.h  gbookmarkfile.h  gbytes.h  gcharset.h  gchecksum.h  gconvert.h  gdataset.h  gdate.h  gdatetime.h  gdir.h  genviron.h  gerror.h  gfileutils.h  ggettext.h  ghash.h  ghmac.h  ghook.h  ghostutils.h  giochannel.h  gkeyfile.h  glibconfig.h  glist.h  gmain.h  gmappedfile.h  gmarkup.h  gmem.h  gmessages.h  gnode.h  goption.h  gpattern.h  gpoll.h  gprimes.h  gqsort.h  gquark.h  (+28 more)
app/src/main/jniLibs/includes/ws/: cfile.h  config.h
app/src/main/jniLibs/includes/ws/epan/: column-info.h  column-utils.h  epan.h  frame_data.h  guid-utils.h  ipv4.h  packet-range.h  packet.h  prefs.h  print.h  print_stream.h  proto.h  range.h  tap.h  tfs.h  timestamp.h  tvbuff.h  value_string.h
app/src/main/jniLibs/includes/ws/epan/dfilter/: dfilter.h  drange.h
app/src/main/jniLibs/includes/ws/epan/ftypes/: ftypes.h
app/src/main/jniLibs/includes/ws/epan/wmem/: wmem_core.h
app/src/main/jniLibs/includes/ws/wiretap/: wtap.h
app/src/main/jniLibs/includes/ws/wsutil/: buffer.h  nstime.h  plugins.h  privileges.h  ws_mempbrk.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: refs.xml  strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/python/mobile_insight/analyzer/kpi/: lte_pdcp_ulgap_analyzer.py
app/src/python/mobile_insight/monitor/dm_collector/: dm_collector.py
app/src/test/java/com/example/login/: ExampleUnitTest.kt
(+7 files in other folders)
